ckad_path/06-services/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec: 
  replicas: 1 
  selector: 
    matchLabels:
      name: nginx-controller
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0

          args:
            - /nginix-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configurtation
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
