ckad_path/06-services/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ingress-controller
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: nginx-controller
