ckad_path/06-services/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:
        matchLabels:
          name: prod
    
    - ipBlock:
        cidr: 192.168.5.10/32
    
    ports:
    - protocol: TCP
      port: 3306

  egress:
  - to: 
    - ipBlock:
        cidr: 192.168.5.10/32

    ports:
    - protocol: TCP
      port: 80
